--- a/functions/package.json
+++ b/functions/package.json
@@ -15,11 +15,12 @@
   },
   "main": "index.js",
   "dependencies": {
+    "axios": "^1.7.9",
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "firebase-functions": "^6.1.1"
   },
   "devDependencies": {
-    "firebase-functions-test": "^3.1.0"
+    "firebase-functions-test": "^3.3.0"
   },
   "private": true
 }
